RRRAHHHH implement logic for managing users and their avatars